webapp-frontend/build_err_utf8.txt

> webapp-frontend@0.0.0 build
> vite build

[36mvite v8.0.10 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Γ£ô 45 modules transformed.
node.exe : [31mΓ£ù[39m Build failed in 2.28s
At C:\Program Files\nodejs\npm.ps1:29 char:3
+   & $NODE_EXE $NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([31mΓ£ù[39m Build failed in 2.28s:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:vue] C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/src/components/Dashboard.vue:119:4
SyntaxError: [vue/compiler-sfc] Unexpected token (119:4)

C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/src/components/Dashboard.vue
117|  }
118|  
119|      }
   |      ^
120|    } catch (e) {
121|      console.error("Toggle Bookmark Error:", e);
    at constructor 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:365:19)
    at Parser.raise 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:6599:19)
    at Parser.unexpected 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:6619:16)
    at Parser.parseExprAtom 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:11442:22)
    at Parser.parseExprSubscripts 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:11081:23)
    at Parser.parseUpdate 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:11066:21)
    at Parser.parseMaybeUnary 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:11046:23)
    at Parser.parseMaybeUnaryOrPrivate 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:10899:61)
    at Parser.parseExprOps 
(C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@babel\parser\lib\index.js:10904:23)
    at Parser.parseMaybeConditional (C:\Users\Administrator\Documents\GitHub\VesperApp\webapp-frontend\node_modules\@ba
bel\parser\lib\index.js:10881:23)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/nod
e_modules/rolldown/dist/shared/error-DL-e8-oE.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/roll
down/dist/shared/error-DL-e8-oE.mjs:18:128)
    at #build (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/rolldown/dist/sha
red/rolldown-build-DSxL8qiP.mjs:3317:34)
    at async buildEnvironment (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/v
ite/dist/node/chunks/node.js:33018:64)
    at async Object.build (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/vite/
dist/node/chunks/node.js:33440:19)
    at async Object.buildApp (file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/vi
te/dist/node/chunks/node.js:33437:153)
    at async CAC.<anonymous> 
(file:///C:/Users/Administrator/Documents/GitHub/VesperApp/webapp-frontend/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
